# Huffman-Compression

./: CMakeLists.txt  LICENSE  README.md
libs/: cli.hpp
src/: main.cpp
src/CLI/: CLI.cpp  CLI.h
src/Decoder/: Decoder.cpp  Decoder.h
src/File/: File.cpp  File.h
src/FrequencyDictionary/: FrequencyDictionary.cpp  FrequencyDictionary.h
src/OutputFile/: OutputFile.cpp  OutputFile.h
src/Queue/: Queue.cpp  Queue.h
src/Tree/: Tree.cpp  Tree.h
